src/main/metadata/objects/FS_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Activation_date__c</fullName>
        <label>Activation date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Reg_Date__c</fullName>
        <label>Actual Reg. Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Asset_Model__c</fullName>
        <label>Asset Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_rate__c</fullName>
        <label>Base rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book_Received_Date__c</fullName>
        <label>Book Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Book_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Book Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Borrower__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Borrower</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FS Contracts</relationshipLabel>
        <relationshipName>FS_Contracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Deposit__c</fullName>
        <label>Cash Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chassis_Number__c</fullName>
        <label>Chassis Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <description>Used by Financial Services.
To store the Contract ID coming from RMW.</description>
        <externalId>true</externalId>
        <label>Contract ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FS Contracts (Dealer)</relationshipLabel>
        <relationshipName>FS_Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Engine_Number__c</fullName>
        <label>Engine Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excess_Amt__c</fullName>
        <label>Excess Amt.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Contract_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Contract ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Financed_Amount__c</fullName>
        <label>Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Product__c</fullName>
        <label>Financial Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_Rate__c</fullName>
        <label>Flat Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guarantor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FS Contracts (Guarantor)</relationshipLabel>
        <relationshipName>FS_Contracts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactive_borrower__c</fullName>
        <label>Inactive borrower</label>
        <length>380</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactive_guarantor__c</fullName>
        <label>Inactive guarantor</label>
        <length>380</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_IRR_rate__c</fullName>
        <label>Net IRR rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_day__c</fullName>
        <label>Pay day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Location__c</fullName>
        <label>Registration Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_by__c</fullName>
        <label>Registration by</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Amount__c</fullName>
        <label>Rental Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Mode__c</fullName>
        <label>Rental Mode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rentals_NextDue__c</fullName>
        <label>Rentals NextDue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rentals_Overdue__c</fullName>
        <label>Rentals Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rentals_Paid__c</fullName>
        <label>Rentals Paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rentals_Un_paid__c</fullName>
        <label>Rentals Un-paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residual_Amount__c</fullName>
        <label>Residual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retail_FS_Borrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail FS Borrower</label>
        <referenceTo>Account_Link__c</referenceTo>
        <relationshipLabel>FS Contracts</relationshipLabel>
        <relationshipName>FS_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_FS_Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail FS Guarantor</label>
        <referenceTo>Account_Link__c</referenceTo>
        <relationshipLabel>FS Contracts (Retail FS Guarantor)</relationshipLabel>
        <relationshipName>FS_Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FS Contracts (Sales Person)</relationshipLabel>
        <relationshipName>FS_Contracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_comm_Amount__c</fullName>
        <label>Target comm. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_subsidy_amount__c</fullName>
        <label>Target subsidy amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_IDC__c</fullName>
        <label>Total IDC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Registration_Fee__c</fullName>
        <label>Total Registration Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>FS Contract</label>
    <nameField>
        <displayFormat>H-{000000}</displayFormat>
        <label>Contract No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FS Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>